--- a/Vendas/Vendas.csproj
+++ b/Vendas/Vendas.csproj
@@ -192,6 +192,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\demo.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-google.css" />
     <Content Include="Content\font-awesome.min.css" />
@@ -236,9 +237,12 @@
     <Content Include="img\faces\.DS_Store" />
     <Content Include="img\tables\.DS_Store" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap-notify.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Cadastro\Cliente.js" />
     <Content Include="Scripts\chartist.min.js" />
+    <Content Include="Scripts\demo.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
