--- a/Vendas/Vendas.csproj
+++ b/Vendas/Vendas.csproj
@@ -156,6 +156,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProdutosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -182,7 +183,9 @@
     <Compile Include="Models\Model\Status.cs" />
     <Compile Include="Models\Model\Venda.cs" />
     <Compile Include="Models\Negocio\ClienteNegocio.cs" />
+    <Compile Include="Models\Negocio\ProdutoNegocio.cs" />
     <Compile Include="Models\Repositorio\ClienteRepositorio.cs" />
+    <Compile Include="Models\Repositorio\ProdutoRepositorio.cs" />
     <Compile Include="Persistencia\VendaDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -269,6 +272,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Produtos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
